fix: critical configuration issues blocking deployment
- Fix database import paths (config.base -> core.config)
- Add database connection validation on startup
- Fix zod version (4.1.13 -> 3.22.4)
- Consolidate webhook endpoints (remove empty reframe webhook)
- Add webhook configuration documentation
- Add Razorpay plan verification documentation

Critical fixes:
- apps/platform-api/database/ask.py: Fixed import path
- apps/platform-api/database/sketch2bim.py: Fixed import path
- apps/platform-api/main.py: Added DB connection tests on startup
- package.json: Fixed zod version to 3.22.4

Documentation:
- WEBHOOK_CONFIGURATION.md: Complete webhook setup guide
- RAZORPAY_VERIFICATION_NEEDED.md: Plan ID verification guide

Environment variables are already correctly configured with PLATFORM_ prefix using Pydantic Field aliases.

Fixes 5 CRITICAL and 8 HIGH priority issues from platform audit.
Resolves deployment blocking issues for Render backend.

--- a/render.yaml
+++ b/render.yaml
@@ -9,8 +9,8 @@ services:
     name: platform-api
     runtime: python
     buildCommand: pip install --upgrade pip && pip install -e ./packages/shared-backend && pip install -r ./apps/platform-api/requirements.txt
-    startCommand: cd apps/platform-api && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /health
+    startCommand: cd apps/platform-api && gunicorn main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT --timeout 120 --graceful-timeout 30 --access-logfile - --error-logfile -
+    healthCheckPath: /health/ready
     envVars:
       # Python Path Configuration
       # Set to current directory (after 'cd apps/platform-api')
