--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ markdown: kramdown
 title: Kushal Samant
 description: Architect
 theme: null
+baseurl: "/kushalsamant.github.io"
+url: "https://thinking.kvshvl.in"
+
