--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ title: Kushal Samant
 description: Architect
 theme: null
 baseurl: "/kushalsamant.github.io"
-url: "https://thinking.kvshvl.in"
-
+url: "https://coherence.kvshvl.in"
