--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Kushal Samant
 description: Architect
 theme: null
 baseurl: "/kushalsamant.github.io"
-url: "https://www.kvshvl.in"
+url: "https://coherence.kvshvl.in"
 show_downloads: true
 google_analytics:
