--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: null
 baseurl: "/kushalsamant.github.io"
 url: "https://coherence.kvshvl.in"
 show_downloads: true
-google_analytics:
+google_analytics: G-N2JNEJSXMD
